design fixes - js for image size and align, video layout fixed, time fades removed

--- a/app/assets/stylesheets/public/_base.sass
+++ b/app/assets/stylesheets/public/_base.sass
@@ -1,6 +1,5 @@
 $font-stack: OfficinaSerifBookSCC, sans-serif
 $firm-color: #335aa5
-
 html, body
   height: 100%
   margin: 0
@@ -38,37 +37,31 @@ body
       margin-top: 0.5em
       color: white
       margin-right: 1em
-      display: none
 
 
   h1
     font-family: $font-stack
 
-  strong
-    font-family: $font-stack
-
-  .content-container
+  #hidden
     display: none
 
-    .flexbox-container
-      width: 100%
-      display: flex
-      flex-direction: column
-      align-items: center
-      justify-content: space-around
+  .em
+    height: 1em
+    display: none
 
-      .centered-item
-        display: flex
-        width: 70%
-        margin-top: 1em
-        display: flex
-        flex-direction: column
-        justify-content: space-around
+  #photo-container,
+  #video-container
+    display: none
+    text-align: center
 
-        .photo
-          width: 100%
+    .photo,
+    .player
+      margin-top: 1em
+      margin-bottom: 1em
 
-        .photo-title
-          font-family: $font-stack
-          margin-top: 1em
-          font-size: 0.7em
+  .title
+    padding-bottom: 3em
+    width: 60%
+    font-family: $font-stack
+    font-size: 0.8em
+    visibility: hidden
